--- a/html/type/main_mo_login.html
+++ b/html/type/main_mo_login.html
@@ -19,15 +19,16 @@
         position: fixed;
         left: 0;
         right: 0;
+        bottom: -48px;
         width: 100vw;
-        height: 100vh;
+        height: auto;
         object-fit: cover;
       }
     </style>
   </head>
   <body>
     <div class="video-wrap">
-      <video autoplay loop playsinline muted>
+      <video autoplay playsinline muted>
         <source src="../../common/video/movie_03.mp4" type="video/mp4" />
       </video>
     </div>
