--- a/html/type/sub_mo.html
+++ b/html/type/sub_mo.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div class="video-wrap">
-      <video autoplay loop playsinline muted>
+      <video autoplay playsinline muted>
         <source src="../../common/video/movie_04.mp4" type="video/mp4" />
       </video>
     </div>
